--- a/new.css
+++ b/new.css
@@ -2,6 +2,14 @@
     height: 150px;  
     background: linear-gradient(orange,white,white,green);
 }
+#grad1_5{
+    height: 350px;
+    background: linear-gradient(orange,white,white,green);
+}
+#grad1_6{
+    height: 450px;
+    background: linear-gradient(orange,white,white,green);
+}
 h1{
     font-size: 30px; font-weight: bold; text-align: center; color: purple;
 }
@@ -11,6 +19,22 @@ img{
     margin-left: 600px;
     margin-top:-2px;
 }
+.img_pg2{
+    height: 50px; width: 300px;
+    margin-left: 490px;margin-top: 20px
+}
+.img_pg3{
+    height: 50px; width: 300px;
+     margin-left: 490px;margin-top: -20px
+}
+.img_pg4{
+    height: 50px; width: 300px;
+    margin-left: 490px;margin-top: 25px;
+}
+.img_pg5{
+    height: 50px; width: 300px;
+    margin-left: 490px;margin-top: 80px;
+}
 #grad2{
     margin-top: -25px;
     height: 190px;
@@ -19,6 +43,10 @@ img{
 #grad3{
     height: 50px;
     background: linear-gradient(lightblue,lightblue,lightblue);
+}
+.grad3_pg3{
+    margin-bottom: 20px;
+
 }
 .text1{
     color: darkblue; font-weight: bold;padding-top: 12px;
@@ -32,6 +60,9 @@ img{
     color: purple;
     text-align: center;  
     margin-top: 40px; 
+}
+.text3_pg5{
+    margin-top: 30px; padding: 20px;
 }
 .text4{
     color: white;
@@ -83,6 +114,9 @@ fieldset{
     font-size: 15px;
     font-weight: bold;
 }
+table{
+    width: 100%;
+}
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
@@ -92,4 +126,16 @@ th, td {
     padding: 35px;
     text-align: left;   
     background: linear-gradient(to right,rgb(114, 198, 231),rgb(189, 212, 221));
+}
+.footer{
+    height: 60px; width: 500px; margin-left: 350px;
+}
+input{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: none;
+    background-color: skyblue;
+    color: white;
 }
